--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Github Snake Animation
 
 on:
   # run automatically every 24 hours
-  # schedule:
-  #   - cron: "0 */24 * * *" 
+  schedule:
+    - cron: "0 */24 * * *" 
   
   # allows to manually run the job at any time
   workflow_dispatch:
@@ -11,7 +11,7 @@ on:
   # run on every push on the master branch
   push:
     branches:
-    - master
+    - main
     
 jobs:
   generate:
